--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -93,7 +93,7 @@ jobs:
         if [[ "${DCDEVSPACE}" == "1" ]]; then
         echo 'No need to set up crave, we are already running in devspace!'
         else
-          sudo mkdir ${HOME}/bin/
+          mkdir ${HOME}/bin/
           curl -s https://raw.githubusercontent.com/accupara/crave/master/get_crave.sh | bash -s --
           sudo mv ${PWD}/crave ${HOME}/bin/
           sudo ln -sf /home/${USER}/bin/crave /usr/bin/crave
@@ -356,7 +356,7 @@ jobs:
         if [[ "${DCDEVSPACE}" == "1" ]]; then
           crave clone create --projectID $PROJECTID $PROJECTFOLDER || echo "Crave clone create failed!"
         else
-          mkdir $PROJECTFOLDER
+          mkdir -p $PROJECTFOLDER
         fi
         
       # Check-out in order to access the repository's files.
